# prism-security

./: .gitignore  AGENTS.md  Dockerfile  PHASE_STATUS.md  docker-compose.yml  prism.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  contributing.md  index.md  quickstart.md  research.md
docs/engines/: dialectic.md  mapper.md  race.md  synthesis.md
prism/: __init__.py  constants.py  exceptions.py  types.py
prism/cli/: config.py  main.py  report.py  scan.py
prism/db/: __init__.py  engine.py  models.py  repository.py
prism/dialectic/: attacker.py  classifier.py  debate.py  defender.py  models.py  storage.py  verdict.py
prism/http/: client.py  executor.py  principal.py  rate_limiter.py  replay.py  request_builder.py  response.py  scope.py  storage.py
prism/ingestion/: crawler.py  graphql.py  har.py  js_extractor.py  normalizer.py  openapi.py  postman.py  proxy.py  swagger.py
prism/interfaces/: http.py  mapper.py  statemachine.py
prism/mapper/: classifier.py  graph.py  identifier.py  inconsistency.py  matrix.py  prober.py  ranker.py
prism/models/: __init__.py  authz.py  config.py  endpoint.py  finding.py  invariant.py  primitive.py  principal.py  state.py
prism/race/: scorer.py  timer.py  toctou.py
prism/reporting/: cvss.py  cwe.py  evidence.py  h1_template.py  html.py  json_reporter.py  markdown.py  poc.py  terminal.py
prism/statemachine/: builder.py  detector.py  hypothesis.py  idempotency.py  lifecycle.py  observer.py
prism/synthesis/: depositor.py  (+5 more)
scripts/: check_file_sizes.py  check_imports.py  validate_pr_body.py
(+72 files in other folders)
